# maildat

./: .example.env  .gitignore  README.md  app.py  pyproject.toml
