[project]
name = "maildat"
version = "0.1.0"
description = "Send bulk emails like a pro"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.7",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "resend>=2.6.0",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.5",
]
